# vending-env

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: rl_steps.jsonl  trajectories.jsonl
scripts/: generate_training_data.py  run_random_agent.py
vending_env/: __init__.py  config.py
vending_env/agents/: __init__.py
vending_env/agents/llm/: __init__.py  loop.py
vending_env/agents/subagent/: __init__.py  executor.py
vending_env/core/: __init__.py  economy.py  events.py  sim.py  state.py  suppliers.py
vending_env/data/: __init__.py  default_suppliers.py
vending_env/eval/: __init__.py  data_generation.py  metrics.py  runner.py  snapshots.py
vending_env/tools/: __init__.py  tool_runtime.py  tool_schemas.py
vending_env/tools/memory/: __init__.py  kv_store.py  scratchpad.py
